<resources>
    <string name="app_name">Root Beer Catalog</string>
    <string name="root_beer_name">Root Beer Name</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="rating">Rating</string>
    <string name="flavor_notes">Flavor Notes</string>
    <string name="flavor_helper">Enter information about the root beer flavor here.</string>
    <string name="location">Location Information</string>
    <string name="location_helper">Enter information about where this root beer was obtained here.</string>
    <string name="quantity">Quantity</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="placeholder">Root Beer Image Placeholder</string>
</resources>